--- a/notifico/views/projects/templates/delete_channel.html
+++ b/notifico/views/projects/templates/delete_channel.html
@@ -8,7 +8,7 @@
       <p>Are you sure you want to remove this channel? If you change your mind, you can always re-add it later.</p>
       <div class="form-actions">
         <button type="submit" class="btn btn-danger" value='d' name='do'>Remove Channel</button>
-        <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn btn-success">Cancel</a>
+        <a href="{{ url_for('.details', u=current_user.username, p=project.name) }}" class="btn btn-success">Cancel</a>
       </div>
     </form>
   </div>
