--- a/notifico/views/projects/templates/edit_project.html
+++ b/notifico/views/projects/templates/edit_project.html
@@ -11,7 +11,7 @@
       {{ forms.render_field(form.public) }}
       <div class="form-actions">
         <button type="submit" class="btn btn-success">Save Changes</button>
-        <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
+        <a href="{{ url_for('.details', u=current_user.username, p=project.name) }}" class="btn">Cancel</a>
       </div>
     </form>
   </div>
